--- a/src/css/supporter.css
+++ b/src/css/supporter.css
@@ -43,9 +43,10 @@ button#logout {
   float: right;
 }
 
-#infoReload {
+img.infoReload {
+  width: 32px;
+  height: 32px;
   float: right;
-  vertical-align: middle;
 }
 
 .borderTable .description {
